# backend/internal/handler/input.go
@@ -7,10 +7,13 @@ import (
 
 // CreateUserRequest represents the request body for creating a new user
 type CreateUserRequest struct {
-	Name  string `json:"name" binding:"required"`
-	Email string `json:"email" binding:"required,email"`
-	City  string `json:"city" binding:"required"`
-	Phone string `json:"phone" binding:"required"`
+	Name   string  `json:"name" binding:"required"`
+	Email  string  `json:"email" binding:"required,email"`
+	City   string  `json:"city" binding:"required"`
+	Phone  string  `json:"phone" binding:"required"`
+	Age    int     `json:"age"`
+	Height int     `json:"height"`
+	Weight float64 `json:"weight"`
 }
 
 // CreateActivityRequest represents the request body for creating a new activity
